# quadra

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gazebo_ros2_control/include/gazebo_ros2_control/: gazebo_ros2_control_plugin.hpp  gazebo_system.hpp  gazebo_system_interface.hpp
install/gazebo_ros2_control/share/ament_index/resource_index/gazebo_ros2_control__pluginlib__plugin/: gazebo_ros2_control
install/gazebo_ros2_control/share/ament_index/resource_index/package_run_dependencies/: gazebo_ros2_control
install/gazebo_ros2_control/share/ament_index/resource_index/parent_prefix_path/: gazebo_ros2_control
install/gazebo_ros2_control/share/gazebo_ros2_control/: gazebo_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gazebo_ros2_control/share/gazebo_ros2_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  gazebo_ros2_controlConfig-version.cmake  gazebo_ros2_controlConfig.cmake
install/gazebo_ros2_control/share/gazebo_ros2_control/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_position_pid  example_tricycle_drive  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: package.sh
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/cmake/: gazebo_ros2_control_demosConfig-version.cmake
install/unitree/lib/unitree/: joint_control_gui.py  joint_trajectory_converter.py  teleop.py
install/unitree/share/unitree/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree/share/unitree/config/: controllers.yaml
install/unitree/share/unitree/launch/: go2_urdflaunch.py
install/unitree/share/unitree/urdf/: go2_urdf.urdf
log/: latest_build
src/unitree/: CMakeLists.txt  package.xml
src/unitree/config/: controllers.yaml  controllers1.yaml
src/unitree/launch/: go2_gazebo.launch.py
src/unitree/urdf/: go2_description.urdf  go2_urdf.urdf
src/unitree/worlds/: empty.world
